// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar handles a capitalized name correctly 1`] = `
<DocumentFragment>
  <div
    class="searchbar-container flex-center"
    style="max-width: 787px;"
  >
    <div
      class="searchbar"
      style="margin-bottom: 30px; width: 100%; position: relative;"
    >
      <div
        class=""
        id="validation-input"
        style="width: 100%;"
      >
        <div
          class="flex"
          style="width: 100%; position: relative;"
        >
          <input
            class="searchbar-input"
            data-testid="searchbar-input-id"
            enterkeyhint="search"
            id="searchbar-input-id"
            pattern="^[a-zA-Z0-9-]{0,32}$"
            placeholder="Find a name"
            spellcheck="false"
            type="search"
            value="ardrive"
          />
          <div
            style="position: absolute; right: 10px; top: 25%;"
          >
            <span />
          </div>
        </div>
        <div
          class="flex flex-column"
          style="font-size: 12px; display: flex; flex-direction: row; justify-content: space-between; margin-top: 15px; gap: 15px; z-index: 1001;"
        >
          <span
            class="flex flex-column flex-left text white"
            style="gap: 0px; align-items: flex-start; justify-content: flex-start;"
          >
            <span
              class="flex"
              style="gap: 12px; align-items: center;"
            >
              <span
                aria-label="check-circle"
                class="anticon anticon-check-circle"
                role="img"
                style="font-size: 16px;"
              >
                <svg
                  aria-hidden="true"
                  data-icon="check-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
                  />
                </svg>
              </span>
              Min. 1 character
            </span>
          </span>
          <span
            class="flex flex-column flex-left text white"
            style="gap: 0px; align-items: flex-start; justify-content: flex-start;"
          >
            <span
              class="flex"
              style="gap: 12px; align-items: center;"
            >
              <span
                aria-label="check-circle"
                class="anticon anticon-check-circle"
                role="img"
                style="font-size: 16px;"
              >
                <svg
                  aria-hidden="true"
                  data-icon="check-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
                  />
                </svg>
              </span>
              Max. 32 characters
            </span>
          </span>
          <span
            class="flex flex-column flex-left text white"
            style="gap: 0px; align-items: flex-start; justify-content: flex-start;"
          >
            <span
              class="flex"
              style="gap: 12px; align-items: center;"
            >
              <span
                aria-label="check-circle"
                class="anticon anticon-check-circle"
                role="img"
                style="font-size: 16px;"
              >
                <svg
                  aria-hidden="true"
                  data-icon="check-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
                  />
                </svg>
              </span>
              No special characters
            </span>
          </span>
          <span
            class="flex flex-column flex-left text white"
            style="gap: 0px; align-items: flex-start; justify-content: flex-start;"
          >
            <span
              class="flex"
              style="gap: 12px; align-items: center;"
            >
              <span
                aria-label="check-circle"
                class="anticon anticon-check-circle"
                role="img"
                style="font-size: 16px;"
              >
                <svg
                  aria-hidden="true"
                  data-icon="check-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
                  />
                </svg>
              </span>
              Dashes cannot be leading or trailing
            </span>
          </span>
        </div>
      </div>
      <button
        class="link bold text flex-center"
        style="position: absolute; right: 75px; height: 100%;"
      >
        Clear
      </button>
      <button
        class="button pointer"
        data-testid="search-button"
        style="border-left: 1px solid #38393B;"
      >
        <div
          fill="white"
          height="18"
          width="18"
        />
      </button>
    </div>
  </div>
  ,
</DocumentFragment>
`;

exports[`SearchBar handles a lowercase name correctly 1`] = `
<DocumentFragment>
  <div
    class="searchbar-container flex-center"
    style="max-width: 787px;"
  >
    <div
      class="searchbar"
      style="margin-bottom: 30px; width: 100%; position: relative;"
    >
      <div
        class=""
        id="validation-input"
        style="width: 100%;"
      >
        <div
          class="flex"
          style="width: 100%; position: relative;"
        >
          <input
            class="searchbar-input"
            data-testid="searchbar-input-id"
            enterkeyhint="search"
            id="searchbar-input-id"
            pattern="^[a-zA-Z0-9-]{0,32}$"
            placeholder="Find a name"
            spellcheck="false"
            type="search"
            value="ardrive"
          />
          <div
            style="position: absolute; right: 10px; top: 25%;"
          >
            <span />
          </div>
        </div>
        <div
          class="flex flex-column"
          style="font-size: 12px; display: flex; flex-direction: row; justify-content: space-between; margin-top: 15px; gap: 15px; z-index: 1001;"
        >
          <span
            class="flex flex-column flex-left text white"
            style="gap: 0px; align-items: flex-start; justify-content: flex-start;"
          >
            <span
              class="flex"
              style="gap: 12px; align-items: center;"
            >
              <span
                aria-label="check-circle"
                class="anticon anticon-check-circle"
                role="img"
                style="font-size: 16px;"
              >
                <svg
                  aria-hidden="true"
                  data-icon="check-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
                  />
                </svg>
              </span>
              Min. 1 character
            </span>
          </span>
          <span
            class="flex flex-column flex-left text white"
            style="gap: 0px; align-items: flex-start; justify-content: flex-start;"
          >
            <span
              class="flex"
              style="gap: 12px; align-items: center;"
            >
              <span
                aria-label="check-circle"
                class="anticon anticon-check-circle"
                role="img"
                style="font-size: 16px;"
              >
                <svg
                  aria-hidden="true"
                  data-icon="check-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
                  />
                </svg>
              </span>
              Max. 32 characters
            </span>
          </span>
          <span
            class="flex flex-column flex-left text white"
            style="gap: 0px; align-items: flex-start; justify-content: flex-start;"
          >
            <span
              class="flex"
              style="gap: 12px; align-items: center;"
            >
              <span
                aria-label="check-circle"
                class="anticon anticon-check-circle"
                role="img"
                style="font-size: 16px;"
              >
                <svg
                  aria-hidden="true"
                  data-icon="check-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
                  />
                </svg>
              </span>
              No special characters
            </span>
          </span>
          <span
            class="flex flex-column flex-left text white"
            style="gap: 0px; align-items: flex-start; justify-content: flex-start;"
          >
            <span
              class="flex"
              style="gap: 12px; align-items: center;"
            >
              <span
                aria-label="check-circle"
                class="anticon anticon-check-circle"
                role="img"
                style="font-size: 16px;"
              >
                <svg
                  aria-hidden="true"
                  data-icon="check-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
                  />
                </svg>
              </span>
              Dashes cannot be leading or trailing
            </span>
          </span>
        </div>
      </div>
      <button
        class="link bold text flex-center"
        style="position: absolute; right: 75px; height: 100%;"
      >
        Clear
      </button>
      <button
        class="button pointer"
        data-testid="search-button"
        style="border-left: 1px solid #38393B;"
      >
        <div
          fill="white"
          height="18"
          width="18"
        />
      </button>
    </div>
  </div>
  ,
</DocumentFragment>
`;

exports[`SearchBar renders correctly 1`] = `
<DocumentFragment>
  <div
    class="searchbar-container flex-center"
    style="max-width: 787px;"
  >
    <div
      class="searchbar"
      style="margin-bottom: 30px; width: 100%; position: relative;"
    >
      <div
        class=""
        id="validation-input"
        style="width: 100%;"
      >
        <div
          class="flex"
          style="width: 100%; position: relative;"
        >
          <input
            class="searchbar-input"
            data-testid="searchbar-input-id"
            enterkeyhint="search"
            id="searchbar-input-id"
            pattern="^[a-zA-Z0-9-]{0,32}$"
            placeholder="Find a name"
            spellcheck="false"
            type="search"
            value=""
          />
          <div
            style="position: absolute; right: 10px; top: 25%;"
          >
            <span />
          </div>
        </div>
        <div
          class="flex flex-column"
          style="font-size: 12px; display: flex; flex-direction: row; justify-content: space-between; margin-top: 15px; gap: 15px; z-index: 1001;"
        />
      </div>
      <button
        class="button pointer"
        data-testid="search-button"
        style="border-left: 1px solid #38393B;"
      >
        <div
          fill="white"
          height="18"
          width="18"
        />
      </button>
    </div>
  </div>
  ,
</DocumentFragment>
`;
